# CMOR-438

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.txt  test2.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: README.md
examples/Supervised_Learning/: README.md
examples/Supervised_Learning/Decision_Trees/: Decision_Trees.ipynb  README.md
examples/Supervised_Learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
examples/Supervised_Learning/K_Nearest_Neighbors/: K_Nearest_Neighbors.ipynb  README.md
examples/Supervised_Learning/Linear_Regression/: Linear_Regression.ipynb  README.md
examples/Supervised_Learning/Logistic_Regression/: Logistic_Regression.ipynb  README.md
examples/Supervised_Learning/Multilayer_Perceptron/: Multilayer_Perceptron.ipynb  README.md
examples/Supervised_Learning/Perceptron/: Perceptron.ipynb  README.md
examples/Supervised_Learning/Regression_Trees/: README.md  Regression_Trees.ipynb
examples/Unsupervised_Learning/: README.md
examples/Unsupervised_Learning/Community_Detection/: Community_Detection.ipynb  README.md
examples/Unsupervised_Learning/DBSCAN/: DBSCAN.ipynb  README.md
examples/Unsupervised_Learning/K_Means_Clustering/: K_Means_Clustering.ipynb  README.md
examples/Unsupervised_Learning/PCA/: PCA.ipynb  README.md
src/: README.md  __init__.py
src/rice_ml/processing/: __init__.py  post_processing.py  preprocessing.py
src/rice_ml/utils/: __init__.py  (+2 more)
tests/unit/: test_distances.py  test_knn.py  test_post_processing.py  test_preprocessing.py
(+19 files in other folders)
